--- a/paper/01-bayes_cpm_mods.Rmd
+++ b/paper/01-bayes_cpm_mods.Rmd
@@ -73,7 +73,7 @@ Y=H(\beta^{T}X+\varepsilon) \quad \text{with} \quad \varepsilon \sim F_{\varepsi
 where $H(\cdot)$ is an increasing function, $\beta$ a vector of regression coefficients, $X$ a vector of covariates, and $\varepsilon$ are errors distributed according to known $F_{\varepsilon}$. Following Zeng and Lin [@zeng_maximum_2007], Harrell [@harrell_regression_2015] and Liu et al. [@liu_modeling_2017] describe approximate non-parametric maximum likelihood estimation (NPMLE)
 for the unspecified transformation $H(\cdot)$ and $\beta$ parameters. The models have several favorable characteristics including invariance of regression coefficient estimates to monotonic outcome transformations and the ability to handle mixed continuous and discrete outcomes such as those that arise from a lower or upper limit of detection. In addition CPMs directly model the full conditional cumulative distribution function (CDF); this allows estimates of conditional means, quantiles, and other statistics to be calculated from a single model fit. Further, because only the $H(\cdot)$ part of the model is nonparametric, CPMs are semiparametric regression models which balance the robustness of fully nonparametric models and the efficiency of fully parametric models.
 
-There is an extensive literature on Bayesian semiparametric regression models. The aim -- stated by Gelfand [@gelfand_approaches_1999] in his discussion of general approaches for these models -- is, ``to enrich the class of standard parameteric hierarchical models by wandering nonparametrically near (in some sense) the standard class but retaining the linear structure.'' For example, Brunner [@brunner_bayesian_1995] describes Bayesian linear regression models with symmetric unimodal error densities and Kottas and Gelfand [@kottas_bayesian_2001] describe Bayesian semiparametric median regression. 
+There is an extensive literature on Bayesian semiparametric regression models. The aim -- stated by Gelfand [@gelfand_approaches_1999] in his discussion of general approaches for these models -- is, ``to enrich the class of standard parametric hierarchical models by wandering nonparametrically near (in some sense) the standard class but retaining the linear structure.'' For example, Brunner [@brunner_bayesian_1995] describes Bayesian linear regression models with symmetric unimodal error densities and Kottas and Gelfand [@kottas_bayesian_2001] describe Bayesian semiparametric median regression. 
 DeYoreo & Kottas [@deyoreo_bayesian_2020] explore Bayesian nonparametric density regression for ordinal responses by modeling the joint density between the outcome and covariates using latent continuous random variables. In the context of transformation models, Song & Lu [@song_semiparametric_2012] develop a semiparametric transformation nonlinear mixed model which estimates the transformation, $H(\cdot)$, and also incorporates possible nonlinear relationships between $X$ and $\beta$ as well as random effects using Bayesian P-splines. Tang et al. [@tang_semiparametric_2018] describe semiparametric Bayesian analysis for transformation linear mixed models using a similar Bayesian P-spline approach to estimate the transformation with a focus on nonparametric estimation of random effects. For survival outcomes, Mallick & Walker [@mallick_bayesian_2003] describe a linear transformation model for mean survival time where the transformation, $H(\cdot)$ and the error distribution, $F_{\varepsilon}$, are estimated nonparametrically using mixtures of incomplete beta functions and a Pólya tree distribution, respectively. Lin et al. [@lin_semiparametric_2012] detail a semiparametric Bayesian transformation model for median survival. Hanson and colleagues [@damien_surviving_2013;@hanson_bayesian_2007] and the text by Ibrahim et al. [@ibrahim_bayesian_2010] describe other Bayesian nonparametric survival models. Additional details on general Bayesian nonparametric models can be found in the texts by Müller et al. [@muller_bayesian_2015] and Hjort et al. [@hjort_bayesian_2010].
 
 <!-- DESCRIBE PROBLEMS/GAPS in literature using previous methods here and how we solve them
@@ -132,7 +132,7 @@ p(\boldsymbol{\gamma},\boldsymbol{\beta}|\boldsymbol{x},\boldsymbol{y}) & \propt
 \label{eq:post}
 &\propto p(\boldsymbol{\pi_{\cdot}}|\boldsymbol{\alpha})|\mathcal{J}|p(\boldsymbol{\beta}) p(\boldsymbol{y}|\boldsymbol{x},\boldsymbol{\gamma},\boldsymbol{\beta})
 \end{align}
-where $\mathcal{J}$ is the Jacobian of the transformation $h(\boldsymbol{\gamma})=\boldsymbol{\pi_{.}}$. Letting $\Omega=\sum_{j=1}^J\pi_{.j}=1$ be the constraint that all category probabilites sum to 1, the entries in $\mathcal{J}$ where $\mathcal{J}_{r,c}$ is the term in row $r$ and column $c$ are
+where $\mathcal{J}$ is the Jacobian of the transformation $h(\boldsymbol{\gamma})=\boldsymbol{\pi_{.}}$. Letting $\Omega=\sum_{j=1}^J\pi_{.j}=1$ be the constraint that all category probabilities sum to 1, the entries in $\mathcal{J}$ where $\mathcal{J}_{r,c}$ is the term in row $r$ and column $c$ are
 \begin{equation*}
 \mathcal{J}_{j,1}=\frac{\partial \pi_{.j}}{\partial \Omega}=1 \quad
 \mathcal{J}_{j+1,j+1}=\frac{\partial \pi_{.j+1}}{\partial \gamma_j}=\frac{\partial}{\partial \gamma_j}\left[G(\gamma_{j+1})-G(\gamma_{j})\right]=-g(\gamma_j) \quad
@@ -291,7 +291,7 @@ knitr::include_graphics(file.path(wd,"fig","sim_d_mn.png"))
 
 The simulation results for the conditional posterior median in scenario (1) are shown in figure \@ref(fig:simplt-med-1). Across outcomes, the conditional median estimates have a positive average percent bias for both $(X_1=1,X_2=0)$ and $(X_1=1,X_2=1)$ with smaller bias for larger sample sizes. There are negligible differences in average percent bias of the median estimates for the three $\boldsymbol{\alpha}$ concentration parameter priors. The pattern looks similar for scenario (2) (supp. fig. \@ref(fig:simplt-med-2)). For both outcomes under scenario (3), average percent bias in the conditional median estimate is smaller at $(X_1=1,X_2=0)$ than $(X_1=1,X_2=1)$. There are only small differences between the three $\boldsymbol{\alpha}$ concentration parameters except with the smaller sample sizes (fig. \@ref(fig:simplt-med-3)). 
 
-Figure \@ref(fig:simplt-q20-a) presents the results for the posterior conditional 20th percentile in scenario (1). The uncensored outcome estimates are quite biased (between 25\% and 90\%) for the smaller sample sizes. The magnitude of the bias varies based on the values of the conditioning variables, $X_1$ and $X_2$, with larger bias when the conditional distribution is further from $\beta_1 = \beta_2 = 0$. The estimates of the conditional 20th percentile for the censored outcome in scenario (1) show a similar effect as the censored outcome. When $(X_1=1,X_2=1)$ the true conditional $Q^{0.2}$ falls below the censoring threshold so the estimated $Q^{0.2}$ is the value assigned to the censored category. This value is biased even with large sample size. For scenario (2) the estimates of the posterior conditional 20th percentile with the uncensored outcome are again positively biased for the smaller sample sizes with more bias for the $\boldsymbol{\alpha}=1/J$ concentration prior (figure \@ref(fig:simplt-q20-b)). The estimates of the conditional 20th percentile for the censored outcome show a similar pattern as the uncensored outcome. Under scenario (3) the uncensored outcome estimates of the conditional 20th percentile have reasonably small average percent bias for all the priors and sample sizes except at $(X_1=1,X_2=1)$ when $n=25$. Similar to scanerio (1), the censored outcome estimates show small average percent bias at $(X_1=1,X_2=0)$, but very large average percent bias at $(X_1=1,X_2=1)$ (fig. \@ref(fig:simplt-q20-c)).
+Figure \@ref(fig:simplt-q20-a) presents the results for the posterior conditional 20th percentile in scenario (1). The uncensored outcome estimates are quite biased (between 25\% and 90\%) for the smaller sample sizes. The magnitude of the bias varies based on the values of the conditioning variables, $X_1$ and $X_2$, with larger bias when the conditional distribution is further from $\beta_1 = \beta_2 = 0$. The estimates of the conditional 20th percentile for the censored outcome in scenario (1) show a similar effect as the censored outcome. When $(X_1=1,X_2=1)$ the true conditional $Q^{0.2}$ falls below the censoring threshold so the estimated $Q^{0.2}$ is the value assigned to the censored category. This value is biased even with large sample size. For scenario (2) the estimates of the posterior conditional 20th percentile with the uncensored outcome are again positively biased for the smaller sample sizes with more bias for the $\boldsymbol{\alpha}=1/J$ concentration prior (figure \@ref(fig:simplt-q20-b)). The estimates of the conditional 20th percentile for the censored outcome show a similar pattern as the uncensored outcome. Under scenario (3) the uncensored outcome estimates of the conditional 20th percentile have reasonably small average percent bias for all the priors and sample sizes except at $(X_1=1,X_2=1)$ when $n=25$. Similar to scenario (1), the censored outcome estimates show small average percent bias at $(X_1=1,X_2=0)$, but very large average percent bias at $(X_1=1,X_2=1)$ (fig. \@ref(fig:simplt-q20-c)).
 
 <!--
 Figure \@ref(fig:simplt-q80-b) presents the estimates of the conditional 80th percentile for the uncensored and censored outcomes in scenario 2. Similar to the 20th percentile estimates, the estimates are positively biased for smaller sample sizes. But in contrast, the estimates using the $\alpha=1/J$ concentration prior are *less* biased compared to the other priors. Figure \@ref(fig:simplt-q80-c) presents the estimates of the conditional 80th percentile for the uncensored and censored outcomes in scenario 3 (avg bias instead of pct bias - check!).
@@ -485,7 +485,7 @@ for quantiles far from the median and conditional quantities further from the mo
 The model is best suited for cases when the data are fairly dense and are sufficient to describe the posterior CDF well. In our simulations, a sample size of 50 or 100 was required for reasonably unbiased estimates of parameters and other posterior quantities. The choice of Dirichlet prior concentration of magnitude $\boldsymbol{\alpha} \approx \frac{1}{J}$ has minimal impact on the bias of posterior estimates, except with small sample sizes. Much larger concentration parameters (e.g., $\boldsymbol{\alpha}=1$) may be too informative. <!--Larger concentration parameters will shrink estimates heavily toward intercepts under assumption of equal probability --> <!-- Although the model can be used with mixed continuous/discrete data, care should be exercised when using mixed outcomes or estimating quantities based on the tails of the CDF-->
 As with all Bayesian models estimated with MCMC, checks of model convergence, model fit and the posterior distribution are important. This is especially true when modeling a mixed continuous/discrete or when interest lies in quantities conditional on covariates far from the observed mean values.
 
-Finally, there are several of limitations of the current model that present an opportunity for improvement. First, the number of distinct outcome values is assumed to be known *a priori*, that is we condition on $J$ categories. In practice, the number of distinct continuous outcome values is unlikely to be available before data collection, so the prior cannot be specified without reference to the observed data. Relatedly, because the number of categories is fixed, the model cannot accomodate new observations for an unobserved category; once the initial prior is set, there is no way to add categories and all predictions are assumed to fall into one of the original categories. It may be possible to overcome this limitation by substituting the Dirichlet prior for a infinite-dimensional Bayesian nonparametric analog, such as a Dirichlet process prior at the expense of additional complexity and computation time. Next, the choice of link function, and the implied error distribution on the scale of the latent untransformed data is also assumed to be known. As seen in the simulations, misspecification of the link function can lead to bias due to the mismatch between the assumed and latent error. This makes interpretation of the $\beta$ parameter estimates challenging because they are only estimated up to a constant of proportionality. If primary interest is not inference for the parameters, specification of the link could be avoided by either estimating the link nonparametrically [@mallick_bayesian_2003; @song_semiparametric_2012; @tang_semiparametric_2018] or using a more flexible mixture link function [@lang_bayesian_1999].
+Finally, there are several of limitations of the current model that present an opportunity for improvement. First, the number of distinct outcome values is assumed to be known *a priori*, that is we condition on $J$ categories. In practice, the number of distinct continuous outcome values is unlikely to be available before data collection, so the prior cannot be specified without reference to the observed data. Relatedly, because the number of categories is fixed, the model cannot accommodate new observations for an unobserved category; once the initial prior is set, there is no way to add categories and all predictions are assumed to fall into one of the original categories. It may be possible to overcome this limitation by substituting the Dirichlet prior for a infinite-dimensional Bayesian nonparametric analog, such as a Dirichlet process prior at the expense of additional complexity and computation time. Next, the choice of link function, and the implied error distribution on the scale of the latent untransformed data is also assumed to be known. As seen in the simulations, misspecification of the link function can lead to bias due to the mismatch between the assumed and latent error. This makes interpretation of the $\beta$ parameter estimates challenging because they are only estimated up to a constant of proportionality. If primary interest is not inference for the parameters, specification of the link could be avoided by either estimating the link nonparametrically [@mallick_bayesian_2003; @song_semiparametric_2012; @tang_semiparametric_2018] or using a more flexible mixture link function [@lang_bayesian_1999].
 
 
 <!--
